--- a/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统.csproj
+++ b/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -159,7 +160,6 @@
     <Folder Include="BLL\" />
     <Folder Include="Common\" />
     <Folder Include="DAL\" />
-    <Folder Include="Models\" />
     <Folder Include="UI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
