--- a/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统.csproj
+++ b/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统.csproj
@@ -72,7 +72,9 @@
     <Reference Include="MySql.Data.EntityFramework, Version=9.3.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.EntityFramework.9.3.0\lib\net48\MySql.Data.EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.8\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
