登录界面开发-建立模型

--- a/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/App.config
+++ b/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/App.config
@@ -25,4 +25,9 @@
     <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=9.3.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
       </provider></providers>
   </entityFramework>
+    <connectionStrings>
+	    <add name="MySqlConnection"
+			    providerName="MySql.Data.MySqlClient"
+			    connectionString="server=localhost;database=evaluationteachingquality_db;user=root;password=1234;" />
+    </connectionStrings>
 </configuration>
