--- a/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统.csproj
+++ b/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统.csproj
@@ -125,9 +125,24 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\CollogeAdmin.cs" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\Enrollment.cs" />
+    <Compile Include="Models\EvaluationAssignment.cs" />
+    <Compile Include="Models\Mentor.cs" />
+    <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\Teacher.cs" />
+    <Compile Include="Models\TeacherEvaluationIndex.cs" />
+    <Compile Include="Models\TeacherTotalPoints.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\LogFrom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\LogFrom.Designer.cs">
+      <DependentUpon>LogFrom.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -140,6 +155,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\LogFrom.resx">
+      <DependentUpon>LogFrom.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -160,7 +178,6 @@
     <Folder Include="BLL\" />
     <Folder Include="Common\" />
     <Folder Include="DAL\" />
-    <Folder Include="UI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
