--- a/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统.csproj
+++ b/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统.csproj
@@ -119,6 +119,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\AuthService.cs" />
+    <Compile Include="Common\SecurityHelper.cs" />
+    <Compile Include="DAL\UserContext.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,11 +140,11 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\LogFrom.cs">
+    <Compile Include="UI\LogForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\LogFrom.Designer.cs">
-      <DependentUpon>LogFrom.cs</DependentUpon>
+    <Compile Include="UI\LogForm.Designer.cs">
+      <DependentUpon>LogForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -155,8 +158,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UI\LogFrom.resx">
-      <DependentUpon>LogFrom.cs</DependentUpon>
+    <EmbeddedResource Include="UI\LogForm.resx">
+      <DependentUpon>LogForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="packages.config" />
@@ -175,9 +178,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="API\" />
-    <Folder Include="BLL\" />
-    <Folder Include="Common\" />
-    <Folder Include="DAL\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
