--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# 我创建的ignore
+西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/App.config
