--- a/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/EvaluationSystem.csproj
+++ b/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/EvaluationSystem.csproj
@@ -146,6 +146,12 @@
     <Compile Include="UI\LogForm.Designer.cs">
       <DependentUpon>LogForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\LogupForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\LogupForm.Designer.cs">
+      <DependentUpon>LogupForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -160,6 +166,9 @@
     </Compile>
     <EmbeddedResource Include="UI\LogForm.resx">
       <DependentUpon>LogForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\LogupForm.resx">
+      <DependentUpon>LogupForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="packages.config" />
