数据库设计

--- a/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/App.config
+++ b/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/App.config
@@ -7,7 +7,7 @@
 	<connectionStrings>
 		<add name="MySqlConnection"
 			    providerName="MySql.Data.MySqlClient"
-			    connectionString="server=localhost;port=3306;database=evaluationteachingquality_db;user=root;password=1234;" />
+			    connectionString="server=192.168.100.83;port=3306;database=evaluationteachingquality_db;user=root;password=1234;" />
 	</connectionStrings>
 
 	<startup>
