--- a/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/EvaluationSystem.csproj
+++ b/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/EvaluationSystem.csproj
@@ -208,6 +208,9 @@
   <ItemGroup>
     <Folder Include="API\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="数据库设计.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
