--- a/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/EvaluationSystem.csproj
+++ b/西南交大2024-2025第2学期软件设计实训——教师教学质量评价系统/EvaluationSystem.csproj
@@ -120,7 +120,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\AuthService.cs" />
+    <Compile Include="BLL\TeacherService.cs" />
     <Compile Include="Common\SecurityHelper.cs" />
+    <Compile Include="DAL\AdminContext.cs" />
+    <Compile Include="DAL\CollegeContext.cs" />
+    <Compile Include="DAL\MentorContext.cs" />
+    <Compile Include="DAL\StudentContext.cs" />
+    <Compile Include="DAL\TeacherContext.cs" />
     <Compile Include="DAL\UserContext.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -128,7 +134,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\CollogeAdmin.cs" />
+    <Compile Include="Models\College.cs" />
+    <Compile Include="Models\CollegeAdmin.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Enrollment.cs" />
     <Compile Include="Models\EvaluationAssignment.cs" />
